--- a/JEE6/jee.website.generator/website/releasenotes.html
+++ b/JEE6/jee.website.generator/website/releasenotes.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Xtext - Language Development Made Easy!</title>
+	<title>JEE6 Generator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		content="The website of Eclipse Xtext, an open-source framework for development of programming langauges and domain-specific languages">
-	<meta name="author" content="Sven Efftinge">
+		content="The website of the JEE6 Generator Project">
+	<meta name="author" content="">
 	<!--  styles -->
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -15,7 +15,6 @@
 	
 	<!-- Le fav and touch icons -->
 	
-	<link rel="shortcut icon" href="images/favicon.png">
 	
 	<link href="css/bootstrap.css" rel="stylesheet" type='text/css'>
 	<link href="css/bootstrap-responsive.css" rel="stylesheet" type='text/css'>
@@ -51,26 +50,8 @@
 				$(this).parent().find('ul').slideToggle();      
 			});
 			$('.has-popover').popover();
-			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			po.src = 'https://apis.google.com/js/plusone.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
 	     });
 		</script>
-	<script type="text/javascript">
-		var _gaq = _gaq || [];	
-	  	_gaq.push([ '_setAccount', 'UA-2429174-3' ]);
-		_gaq.push([ '_trackPageview' ]);
-		(function() {
-			var ga = document.createElement('script');
-			ga.type = 'text/javascript';
-			ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl'
-					: 'http://www')
-					+ '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0];
-			s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
 </head>
 <body>
 	<!-- Navbar -->
@@ -86,7 +67,6 @@
 					<ul class="nav">
 						<li ><a href="download.html">Download</a></li>
 						<li ><a href="documentation.html">Documentation</a></li>
-						<li ><a href="community.html">Community</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
 						<li ><a href="http://www.eclipse.org">Eclipse.org</a></li>
 					</ul>
@@ -262,20 +242,6 @@ switch p {
 						</ul>
 					</div>
 					<div class="span6">
-						<h3 style="padding-top: 0px; margin-top: 0px;"><a href="https://twitter.com/xtext" style="color : white;">@Xtext</a> on Twitter</h3>
-						<a class="twitter-timeline" href="https://twitter.com/xtext" data-widget-id="346625441290928128"
-						data-chrome="noheader nofooter transparent"
-						data-theme="dark">Tweets by @xtext</a>
-						<script>
-						!function(d,s,id) { 
-							var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-							if(!d.getElementById(id)) { 
-							  js=d.createElement(s);
-							  js.id=id;
-							  js.src=p+"://platform.twitter.com/widgets.js";
-							  fjs.parentNode.insertBefore(js,fjs);
-							}
-						}(document,"script","twitter-wjs");</script>
 					</div>
 				</div>
 			</div>
