--- a/JEE6/jee.website.generator/website/download.html
+++ b/JEE6/jee.website.generator/website/download.html
@@ -5,8 +5,8 @@
 	<title>JEE6 Generator</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 	<meta name="description"
-		content="The website of the JEE6 Generator Project">
-	<meta name="author" content="Steffen A. Mork, Dominik Pieper">
+		content="Die Website des JEE6 Generator Projects">
+	<meta name="author" content="">
 	<!--  styles -->
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -103,17 +103,17 @@
 					    	<td style="text-align: center;">
 					    	<a
 					    	rel="popover"
-					    	data-content="This is an Eclipse Kepler update site URL, which you need to paste into the update manager within Eclipse!"
+					    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
 					    	data-original-title="Right-click and 'Copy Link'"
 					    	href="http://jee6-generator.itemis.de/updates/kepler/"
 					    	class="has-popover btn btn-primary btn-large"
-					    	style="width: 70%;">Release</a></td>
+					    	style="width: 70%;">Kepler</a></td>
 					    </tr>
 					    <tr>
 							<td style="text-align: center;">
 							<a
 							  rel="popover"
-					    	data-content="This is an Eclipse Kepler update site URL, which you need to paste into the update manager within Eclipse!"
+					    	data-content="This is an Eclipse update site URL, which you need to paste into the update manager within Eclipse!"
 					    	data-original-title="Right-click and 'Copy Link'"
 							  href="http://jee6-generator.itemis.de/updates/snapshot/"
 					    	class="has-popover btn btn-primary btn-large"
@@ -170,14 +170,14 @@
 		</div>
 		    <div class="container">
 						<div class="container">
-		<h2>Installation</h2>
+		<h2>Installation Instructions</h2>
 		<hr>
 		<div class="span1">&nbsp;</div>
 		  <div class="span9">
 		    <p>
-		      <strong>Der JEE6 Generator ist in Java implementiert, deswegen muss zur Ausführung das
+		      <strong>  The JEE6 Generator is implemented in Java, so you must have a
 		        <a href="http://www.oracle.com/technetwork/java/index.html">Java
-		        Runtime Environment</a> installiert sein.
+		        Runtime Environment</a> installed in order to proceed.
 		      </strong>
 		    </p>
 		    <p>
@@ -242,6 +242,8 @@
 				      </div>
 				      <div id="Was_ist_eine_Updatesite_" class="accordion-body collapse">
 				    	<div class="accordion-inner">
+				    	  Eclipse hat einen eingebauten Updatemanager, dieser arbeitet mit so genannten Updatesites als Quelle.<br />
+				    	  In Eclipse öffne das <i>"Help"</i> Menü und klicke auf <i>"Install new Software..."</i>.
 				    	</div>
 				      </div>
 				    </div>
@@ -253,7 +255,7 @@
 				      </div>
 				      <div id="Was_ist_die_Lizenz_des_JEE6_Generators_" class="accordion-body collapse">
 				    	<div class="accordion-inner">
-				    	  <p>Der JEE6 Generator ist frei verfügbar unter der <a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License</a>.</p>
+				    	  <p>Der JEE6 Generator frei verfügbar unter der <a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License</a>.</p>
 				    	</div>
 				      </div>
 				    </div>
@@ -270,11 +272,11 @@
 					<div class="span6">
 						<h3 style="padding-top: 0px; margin-top: 0px;">Quick Links</h3>
 						<ul class="footer-links clearfix">
-							<li><a href="http://itemis.de">itemis AG</a></li>
+							<li><a href="http://itemis.de/">itemis AG</a></li>
 							<li><a href="https://www.youtube.com/user/itemisAG">itemis Youtube Kanal</a></li>
 						</ul>
 						<ul class="footer-links clearfix">
-							<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
+	      					<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
 							<li><a href="http://glassfish.java.net/">Glassfish Application Server</a></li>
 						</ul>
 					</div>
