--- a/JEE6/jee.website.generator/website/aboutus.html
+++ b/JEE6/jee.website.generator/website/aboutus.html
@@ -5,8 +5,8 @@
 	<title>JEE6 Generator</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 	<meta name="description"
-		content="The website of the JEE6 Generator Project">
-	<meta name="author" content="Steffen A. Mork, Dominik Pieper">
+		content="Die Website des JEE6 Generator Projects">
+	<meta name="author" content="">
 	<!--  styles -->
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -80,13 +80,12 @@
 	<!-- Navbar End -->
 <div id="header_wrapper" class="container" >
 </div>
-<div id="page">
-	<div class="inner">
-		<div class="container clearfix">
-			
+	<div id="page">
+		<div id="team" class="container clearfix"> 
+			<h2>Über uns</h2>
+	        <hr>
 		</div>
 	</div>
-</div>
 	<div id="extra">
 		<div class="inner">
 			<div class="container">
@@ -94,11 +93,11 @@
 					<div class="span6">
 						<h3 style="padding-top: 0px; margin-top: 0px;">Quick Links</h3>
 						<ul class="footer-links clearfix">
-							<li><a href="http://itemis.de">itemis AG</a></li>
+							<li><a href="http://itemis.de/">itemis AG</a></li>
 							<li><a href="https://www.youtube.com/user/itemisAG">itemis Youtube Kanal</a></li>
 						</ul>
 						<ul class="footer-links clearfix">
-							<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
+	      					<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
 							<li><a href="http://glassfish.java.net/">Glassfish Application Server</a></li>
 						</ul>
 					</div>
