--- a/JEE6/jee.website.generator/website/community.html
+++ b/JEE6/jee.website.generator/website/community.html
@@ -5,8 +5,8 @@
 	<title>JEE6 Generator</title>
 	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 	<meta name="description"
-		content="The website of the JEE6 Generator Project">
-	<meta name="author" content="Steffen A. Mork, Dominik Pieper">
+		content="Die Website des JEE6 Generator Projects">
+	<meta name="author" content="">
 	<!--  styles -->
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -96,10 +96,7 @@
 				    <h3>Bug gefunden?</h3>
 				 	</div>
 					<div class="span6 ">
-						<p>
-						Du hast einen Bug gefunden oder einen Verbesserungsvorschlag?
-						Sende uns ein Mail an <strong>jee6-generator@itemis.de</strong>
-						</p>
+						Du hast einen Bug gefunden oder einen Verbesserungsvorschlag? Sende uns ein Mail an <strong>jee6-generator@itemis.de</strong>
 					</div>
 					</div>
 				</div>
@@ -114,11 +111,11 @@
 					<div class="span6">
 						<h3 style="padding-top: 0px; margin-top: 0px;">Quick Links</h3>
 						<ul class="footer-links clearfix">
-							<li><a href="http://itemis.de">itemis AG</a></li>
+							<li><a href="http://itemis.de/">itemis AG</a></li>
 							<li><a href="https://www.youtube.com/user/itemisAG">itemis Youtube Kanal</a></li>
 						</ul>
 						<ul class="footer-links clearfix">
-							<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
+	      					<li><a href="http://www.jboss.org/jbossas">JBoss Application Server 7</a></li>
 							<li><a href="http://glassfish.java.net/">Glassfish Application Server</a></li>
 						</ul>
 					</div>
