--- a/JEE6/de.itemis.jee6.website/website/index.html
+++ b/JEE6/de.itemis.jee6.website/website/index.html
@@ -66,7 +66,7 @@
 				<div class="nav-collapse collapse" style="height: 0px;">
 					<ul class="nav">
 						<li ><a href="download.html">Download</a></li>
-						<li ><a href="documentation.html">Documentation</a></li>
+						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li ><a href="community.html">Community</a></li>
 						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
@@ -84,13 +84,13 @@
 	<div class="flexslider image-slider">
 		<div class="span5 slide">
 			<h2>
-				Java Enterprise Development made <strong>Easy!</strong>
+				Java Enterprise Entwicklung <strong>leicht</strong> gemacht!
 			</h2>
 			<br />
 			<p>
-				Don't repeat yourself by implementing the same things ever and ever.
-				Use a simple DSL to generate an CRUD Prototype of your application,
-				change and extend it to your needs.
+			Wiederholen Sie nicht sich selbst, wenn Sie dieselben Dinge wieder und wieder neu implementieren.
+			Benutzen Sie eine einfache DSL, um damit einen CRUD-Prototypen Ihrer Web-Applikation zu erzeugen.
+			Ändern und erweitern Sie Ihre Web-Applikation nach Ihren Bedürfnissen.
 			</p>
 			<a href="download.html" class="btn_download"></a>
 		</div>
