--- a/JEE6/de.itemis.jee6.website/website/index.html
+++ b/JEE6/de.itemis.jee6.website/website/index.html
@@ -66,7 +66,7 @@
 				<div class="nav-collapse collapse" style="height: 0px;">
 					<ul class="nav">
 						<li ><a href="download.html">Download</a></li>
-						<li ><a href="documentation.html">Dokumentation</a></li>
+						<li ><a href="documentation.html">Documentation</a></li>
 						<li ><a href="community.html">Community</a></li>
 						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
@@ -88,9 +88,9 @@
 			</h2>
 			<br />
 			<p>
-			Wiederholen Sie nicht sich selbst, wenn Sie dieselben Dinge wieder und wieder neu implementieren.
-			Benutzen Sie eine einfache DSL, um damit einen CRUD-Prototypen Ihrer Web-Applikation zu erzeugen.
-			Ändern und erweitern Sie Ihre Web-Applikation nach Ihren Bedürfnissen.
+				Wiederholen Sie nicht sich selbst, wenn Sie dieselben Dinge wieder und wieder neu implementieren.
+				Benutzen Sie eine einfache DSL, um damit einen CRUD-Prototypen Ihrer Web-Applikation zu erzeugen.
+				Ändern und erweitern Sie Ihre Web-Applikation nach Ihren Bedürfnissen.
 			</p>
 			<a href="download.html" class="btn_download"></a>
 		</div>
