--- a/JEE6/de.itemis.jee6.website/website/aboutus.html
+++ b/JEE6/de.itemis.jee6.website/website/aboutus.html
@@ -15,7 +15,7 @@
 	
 	<!-- Le fav and touch icons -->
 	
-	<link rel="shortcut icon" href="images/favicon.png">
+	<link rel="shortcut icon" href="images/favicon.ico">
 	
 	<link href="css/bootstrap.css" rel="stylesheet" type='text/css'>
 	<link href="css/bootstrap-responsive.css" rel="stylesheet" type='text/css'>
@@ -66,7 +66,8 @@
 				<div class="nav-collapse collapse" style="height: 0px;">
 					<ul class="nav">
 						<li ><a href="download.html">Download</a></li>
-						<li ><a href="documentation.html">Documentation</a></li>
+						<li ><a href="features.html">Features</a></li>
+						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li ><a href="community.html">Community</a></li>
 						<li class="active"><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
@@ -83,7 +84,42 @@
 	<div id="page">
 		<div id="team" class="container clearfix"> 
 			<h2>Über uns</h2>
-	        <hr>
+			<hr/>
+			<div id="Leute">
+				<div id="links">
+					<img src="images/mork.steffen.jpg"/>
+					<h3>Steffen A. Mork</h3>
+					<p>
+						Steffen hat an der Universität Dortmund Kerninformatik studiert. Nach seinem Studium hat er
+						im Bereich Dokumentenmanagement und Java Enterprise erste Erfahrungen gesammelt. Seit 2005
+						ist er bei der itemis AG für die Infrastruktur und Beschaffung verantwortlich. Als Software
+						Entwickler hat er mehrere Frameworks entwickelt:
+						<ul>
+							<li>
+								Die modellgetriebene Server-Konfiguration ermöglicht es auf einfache Weise, den Soll-Zustand
+								der itemis-Server zu verwalten. Die Konfiguration wird zentral generiert und berücksichtigt
+								Abhängigkeiten zwischen den Diensten über alle Standorte hinweg.
+							</li>
+							<li>
+								Für die modell(-bau-)basierte <a href="http://eisenbahnsteuerung.org">Eisenbahnsteuerung</a>
+								hat er sowohl die auf CAN-Bus basierenden Steuerungs-Controller programmiert, als auch
+								das Frontend des Eclipse basierten Frontends.
+							</li>
+							<li>
+								Seit 2012 arbeitet Steffen an dem <a href="http://www.jee-generator.de">JEE-Generator</a>, der
+								modellbasiert ein einfaches Prototyping für Web-Anwendungen ermöglicht. Einige dieser Web-Anwendungen
+								werden hausintern verwendet, um die Produktivität zu erhöhen.
+							</li>
+						</ul>
+					</p>
+				</div>
+				<div id="rechts">
+					<img src="images/pieper.dominik.jpg"/>
+					<h3>Dominik Pieper</h3>
+					<p>
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="extra">
