--- a/JEE6/de.itemis.jee6.website/website/community.html
+++ b/JEE6/de.itemis.jee6.website/website/community.html
@@ -66,7 +66,8 @@
 				<div class="nav-collapse collapse" style="height: 0px;">
 					<ul class="nav">
 						<li ><a href="download.html">Download</a></li>
-						<li ><a href="documentation.html">Documentation</a></li>
+						<li ><a href="features.html">Features</a></li>
+						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li class="active"><a href="community.html">Community</a></li>
 						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
@@ -82,8 +83,26 @@
 </div>
 	<div id="page">
 		<div id="team" class="container clearfix"> 
-			<h2>Über uns</h2>
+			<h2>Community</h2>
 	        <hr>
+			<div class="row">
+				<div class="span1">&nbsp;</div>
+				<div class="span9 team">
+			    <a href="mailto:jee6-generator@itemis.de" class="anchor-in-div"></a>
+			    <div class="row">
+				  <div class="span1 ">
+				    <img src="images/icon-bug-blue.png" alt="image" class="image_left">
+				  </div>
+				  <div class="span2 ">
+				    <h3>Bug gefunden?</h3>
+				 	</div>
+					<div class="span6 ">
+						Du hast einen Bug gefunden oder einen Verbesserungsvorschlag? Sende uns ein Mail an <strong>jee6-generator@itemis.de</strong>
+					</div>
+					</div>
+				</div>
+			  <div class="span1">&nbsp;</div>
+			</div>
 		</div>
 	</div>
 	<div id="extra">
