--- a/JEE6/de.itemis.jee6.website/website/download.html
+++ b/JEE6/de.itemis.jee6.website/website/download.html
@@ -66,7 +66,8 @@
 				<div class="nav-collapse collapse" style="height: 0px;">
 					<ul class="nav">
 						<li class="active"><a href="download.html">Download</a></li>
-						<li ><a href="documentation.html">Documentation</a></li>
+						<li ><a href="features.html">Features</a></li>
+						<li ><a href="documentation.html">Dokumentation</a></li>
 						<li ><a href="community.html">Community</a></li>
 						<li ><a href="aboutus.html">Über uns</a></li>
 						<li ><a href="http://xtext.org">Xtext</a></li>
